--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Bootstrap Webpage</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-    <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
+      <a class="navbar-brand" href="./index.html">
+    <img src="./img/logo/FiveTen.png" alt="logo" class="logo">
   </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -31,19 +31,19 @@
   <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="./index.html">Home</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Artists
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="ace.html">Chicano Ace</a>
-        <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
+        <a class="dropdown-item" href="./ace.html">Chicano Ace</a>
+        <a class="dropdown-item" href="./adrian.html">Adrian Lazaro</a>
       </div>
     </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="./contact.html">Contact</a>
       </li>
     </ul>
   </div>
@@ -51,9 +51,9 @@
   </nav>
     <div class="full-screen-video-container">
       <video id="vid1" autoplay loop muted preload="auto">
-        <source src="/video/Jumbotron_Resized.mp4" type="video/mp4" />
+        <source src="./video/jumbotron_resized.mp4" type="video/mp4" />
       </video>
-      <div class="full-screen-video-content"><img src="/img/logo/welcome.png" alt="welcome" style="width: 50vw;" class="img-fluid"></div>
+      <div class="full-screen-video-content"><img src="./img/logo/welcome.png" alt="welcome" style="width: 50vw;" class="img-fluid"></div>
     </div>
     <div class="container-fluid">
       <div class="row bg-img2 d-flex justify-content-center">
@@ -75,20 +75,20 @@ Staff at Five Ten Studio<br>
     <div class="container-fluid">
       <div class="row bg-light">
         <div class="col-md-4 col-sm-4 d-flex justify-content-center align-items-center">
-          <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
-        <button id="a_button"><a type="button" href="ace.html"class="btn btn-primary">Chicano Ace</a></button>
+          <img src="./img/ace/ace_banner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
+        <button id="a_button"><a type="button" href="./ace.html"class="btn btn-primary">Chicano Ace</a></button>
         </div>
         <div class="col-md-4 col-sm-4 d-flex justify-content-center align-self-center">
-          <img src="img/logo/Artist_Selector2.png" alt="artist-selector" class="w-100 h-100 img-fluid"></div>
+          <img src="./img/logo/artist_selector2.png" alt="artist-selector" class="w-100 h-100 img-fluid"></div>
           <div class="col-md-4 col-sm-4 d-flex justify-content-center align-items-center">
-            <img src="/img/banner/AdrianProfile (1).jpg" alt="adrian_thumbnail" class="w-100 h-100 img-fluid artist-banner-thumbnail">
-            <button id="a_button"><a href="adrian.html"type="button" class="btn btn-primary">
+            <img src="./img/banner/adrianprofile.jpg" alt="adrian_thumbnail" class="w-100 h-100 img-fluid artist-banner-thumbnail">
+            <button id="a_button"><a href="./adrian.html"type="button" class="btn btn-primary">
               Adrian Lazaro</a></button>
         </div>
       </div>
     </div>
     <div class="container-fluid">
-      <div id="demo" class="carousel slide"       data-ride="carousel">
+      <div id="demo" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="carousel-caption">
