--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
-    <img src="./img/logo/FiveTen.png" alt="logo" class="logo">
+    <img src="./img/logo/fiveten.png" alt="logo" class="logo">
   </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -51,7 +51,7 @@
   </nav>
     <div class="full-screen-video-container">
       <video id="vid1" autoplay loop muted preload="auto">
-        <source src="./video/jumbotron_resized.mp4" type="video/mp4" />
+        <source src="./video/jumbotronresized.mp4" type="video/mp4" />
       </video>
       <div class="full-screen-video-content"><img src="./img/logo/welcome.png" alt="welcome" style="width: 50vw;" class="img-fluid"></div>
     </div>
@@ -75,11 +75,11 @@ Staff at Five Ten Studio<br>
     <div class="container-fluid">
       <div class="row bg-light">
         <div class="col-md-4 col-sm-4 d-flex justify-content-center align-items-center">
-          <img src="./img/ace/ace_banner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
+          <img src="./img/ace/acebanner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
         <button id="a_button"><a type="button" href="./ace.html"class="btn btn-primary">Chicano Ace</a></button>
         </div>
         <div class="col-md-4 col-sm-4 d-flex justify-content-center align-self-center">
-          <img src="./img/logo/artist_selector2.png" alt="artist-selector" class="w-100 h-100 img-fluid"></div>
+          <img src="./img/logo/artistselector2.png" alt="artist-selector" class="w-100 h-100 img-fluid"></div>
           <div class="col-md-4 col-sm-4 d-flex justify-content-center align-items-center">
             <img src="./img/banner/adrianprofile.jpg" alt="adrian_thumbnail" class="w-100 h-100 img-fluid artist-banner-thumbnail">
             <button id="a_button"><a href="./adrian.html"type="button" class="btn btn-primary">
