adrian.html link fixed

--- a/adrian.html
+++ b/adrian.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/adrian.css">
+    <link rel="stylesheet" href="./css/adrian.css">
   </head>
   <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-    <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
+      <a class="navbar-brand" href="./index.html">
+    <img src="./img/logo/fiveten.png" alt="logo" class="logo">
   </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -25,38 +25,38 @@
   <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="./index.html">Home</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Artists
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="ace.html">Chicano Ace</a>
-        <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
+        <a class="dropdown-item" href="./ace.html">Chicano Ace</a>
+        <a class="dropdown-item" href="./adrian.html">Adrian Lazaro</a>
       </div>
     </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="./contact.html">Contact</a>
       </li>
     </ul>
   </div>
     </div>
   </nav>
     <div class="banner pb-5">
-        <img class="bg-img"src="/img/banner/Adrian_Banner.jpg" style="width: 100%; height: 100%;">
+        <img class="bg-img"src="/img/banner/adrianbanner.jpg" style="width: 100%; height: 100%;">
     </div>
     <div class="container bg-light">
       <div class="row align-items-center">
         <h1 class="py-5"><h1><span class="border border-5 p-3 border-warning shadow-lg">Gallery</span></h1>
         <div class="col py-5">
-          <img src="img/adrian/tattoos/tattoo_0.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
+          <img src="./img/adrian/tattoos/tattoo_0.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
     <div class="col py-5">
-      <img src="img/adrian/tattoos/tattoo_1.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
+      <img src="./img/adrian/tattoos/tattoo_1.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
     </div>
     <div class="col py-5">
-      <img src="img/adrian/tattoos/tattoo_2.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
+      <img src="./img/adrian/tattoos/tattoo_2.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
       </div>
       </div>
       <div class="row align-items-center">
@@ -64,43 +64,43 @@
     <img src="/img/adrian/tattoos/tattoo_3.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_5.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_6.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
-        </div>
-        <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_7.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
-        </div>
-        <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_8.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_5.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
       </div>
       <div class="row align-items-center">
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_9.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_6.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_7.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_11.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_8.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
       </div>
       <div class="row align-items-center">
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_12.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_9.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_13.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_14.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_11.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col py-5">
+    <img src="./img/adrian/tattoos/tattoo_12.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
+        </div>
+        <div class="col py-5">
+    <img src="./img/adrian/tattoos/tattoo_13.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+        </div>
+        <div class="col py-5">
+    <img src="./img/adrian/tattoos/tattoo_14.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
       </div>
     </div>
