--- a/ace.html
+++ b/ace.html
@@ -15,15 +15,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="/css/ace.css" />
+    <link rel="stylesheet" href="./css/ace.css" />
     <title>Hello, world!</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo" />
+        <a class="navbar-brand" href="./index.html">
+          <img src="./img/logo/fiveten.png" alt="logo" class="logo" />
         </a>
 
         <button
@@ -41,7 +40,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -53,19 +52,19 @@
                 Artists
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="ace.html">Chicano Ace</a>
-                <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
+                <a class="dropdown-item" href="./ace.html">Chicano Ace</a>
+                <a class="dropdown-item" href="./adrian.html">Adrian Lazaro</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
         <div class="banner">
-      <img src="/img/banner/Ace_2.0.jpg" alt="" class="ace_banner">
+      <img src="./img/banner/ace_2.0.jpg" alt="" class="ace_banner">
     </div>
     <div class="container bg-light">
       <div class="row align-items-center">
