--- a/ace.html
+++ b/ace.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/ace.css" />
     <title>Hello, world!</title>
   </head>
@@ -70,57 +71,57 @@
       <div class="row align-items-center">
         <h1 class=><h1><span class="border border-5 p-3 m-4 border-warning shadow-lg">Gallery</span></h1>
         <div class="col">
-          <img src="img/ace/Ace_0.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+          <img src="./img/ace/Ace_0.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
         </div>
         <div class="col">
-        <img src="/img/ace/ace_2.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+        <img src="./img/ace/ace_2.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
       </div>
       <div class="col">
-        <img src="/img/ace/ace_3.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+        <img src="./img/ace/ace_3.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
       </div>
       </div>
       <div class="row align-items-center">
         <div class="col">
-          <img src="/img/ace/ace_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          <img src="./img/ace/ace_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-            <img src="img/ace/ace_6.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/ace_6.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-            <img src="img/ace/ace_7.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/ace_7.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
           </div>
       </div>
       <div class="row align-items-center">
         <div class="col">
-            <img src="img/ace/ace_8.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/ace_8.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-            <img src="img/ace/ace_9.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/ace_9.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-            <img src="img/ace/Ace_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/Ace_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
           </div>
         </div>
         <div class="row align-items-center">
           <div class="col">
-            <img src="img/ace/ace_11.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/ace_11.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
           </div>
         <div class="col">
-          <img src="img/ace/ace_12.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          <img src="./img/ace/ace_12.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-          <img src="img/ace/ace_13.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          <img src="./img/ace/ace_13.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <img src="img/ace/ace_14.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
+          <img src="./img/ace/ace_14.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-          <img src="img/ace/ace_15.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          <img src="./img/ace/ace_15.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-          <img src="img/ace/crying_mary.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          <img src="./img/ace/crying_mary.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
       </div>
     </div>
