--- a/adrian.html
+++ b/adrian.html
@@ -61,7 +61,7 @@
       </div>
       <div class="row align-items-center">
         <div class="col py-5">
-    <img src="/img/adrian/tattoos/tattoo_3.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+    <img src="./img/adrian/tattoos/tattoo_3.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
     <img src="./img/adrian/tattoos/tattoo_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
