--- a/ace.html
+++ b/ace.html
@@ -70,10 +70,10 @@
       <div class="row align-items-center">
         <h1 class=><h1><span class="border border-5 p-3 m-4 border-warning shadow-lg">Gallery</span></h1>
         <div class="col">
-          <img src="./img/ace/ace_0.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+          <img src="./img/ace/ace0.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
         </div>
         <div class="col">
-        <img src="./img/ace/ace_2.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+        <img src="./img/ace/ace_mytattoojpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
       </div>
       <div class="col">
         <img src="./img/ace/ace_3.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
@@ -98,7 +98,7 @@
             <img src="./img/ace/ace_9.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
         </div>
         <div class="col">
-            <img src="./img/ace/Ace_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+            <img src="./img/ace/ace_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
           </div>
         </div>
         <div class="row align-items-center">
