contact.css linked

--- a/ace.html
+++ b/ace.html
@@ -64,7 +64,7 @@
       </div>
     </nav>
         <div class="banner">
-      <img src="./img/banner/ace_2.0.jpg" alt="" class="ace_banner">
+      <img src="./img/banner/acebanner.jpg" alt="" class="ace_banner">
     </div>
     <div class="container bg-light">
       <div class="row align-items-center">
@@ -73,7 +73,7 @@
           <img src="./img/ace/ace0.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
         </div>
         <div class="col">
-        <img src="./img/ace/ace_mytattoojpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+        <img src="./img/ace/mytattoo.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
       </div>
       <div class="col">
         <img src="./img/ace/ace_3.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
