--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="./css/contact.css" />
     <title>Bootstrap Webpage</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-    <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo"></a>
+      <a class="navbar-brand" href="./index.html">
+    <img src="/img/logo/fiveten.png" alt="logo" class="logo"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -29,19 +29,19 @@
     <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="./index.html">Home</a>
         </li>
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
           Artists
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href=ace.html>Chicano Ace</a>
-          <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
+          <a class="dropdown-item" href=./ace.html>Chicano Ace</a>
+          <a class="dropdown-item" href="./adrian.html">Adrian Lazaro</a>
         </div>
       </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="./contact.html">Contact</a>
         </li>
       </ul>
     </div>
