--- a/ace.html
+++ b/ace.html
@@ -20,49 +20,36 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">
-          <img src="./img/logo/fiveten.png" alt="logo" class="logo" />
-        </a>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html">
+    <img src="./img/logo/fiveten.png" alt="logo" class="logo">
+  </a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapsibleNavbar"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <div
-          class="collapse navbar-collapse justify-content-end px-5"
-          id="collapsibleNavbar"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbardrop"
-                data-toggle="dropdown"
-              >
-                Artists
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="./ace.html">Chicano Ace</a>
-                <a class="dropdown-item" href="./adrian.html">Adrian Lazaro</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
+  <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="./index.html">Home</a>
+      </li>
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        Artists
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="./ace.html">Chicano Ace</a>
+        <a class="dropdown-item" href="./adrian.html">Adrian Lazaro</a>
       </div>
-    </nav>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./contact.html">Contact</a>
+      </li>
+    </ul>
+  </div>
+    </div>
+  </nav>
         <div class="banner">
       <img src="./img/banner/acebanner.jpg" alt="" class="ace_banner">
     </div>
