--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
-    <img src="/img/logo/fiveten.png" alt="logo" class="logo"></a>
+    <img src="./img/logo/fiveten.png" alt="logo" class="logo"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
