shrink to fit contact

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     </div>
     </nav>
     <div id="form"></div>
-    <div class="container">
+    <div class="container row-cols-md-4">
       <b><span style="letter-spacing: 3.5px;">CONTACT US</span><br><br></br>
       <span class="Address">ADDRESS<br>
       555 Melrose Ave, Los Angeles, CA 90029<br>
